--- a/AOC_2022.csproj
+++ b/AOC_2022.csproj
@@ -10,7 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="AnimatedGif" Version="1.0.5" />
+    <PackageReference Include="C5" Version="2.5.3" />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+    <PackageReference Include="VDS.Common" Version="1.10.0" />
   </ItemGroup>
 
 </Project>
